; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/ppc/extr_daca.c_daca_cleanup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/ppc/extr_daca.c_daca_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pmac = type { %struct.pmac_daca* }
%struct.pmac_daca = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_pmac*)* @daca_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @daca_cleanup(%struct.snd_pmac* %0) #0 {
  %2 = alloca %struct.snd_pmac*, align 8
  %3 = alloca %struct.pmac_daca*, align 8
  store %struct.snd_pmac* %0, %struct.snd_pmac** %2, align 8
  %4 = load %struct.snd_pmac*, %struct.snd_pmac** %2, align 8
  %5 = getelementptr inbounds %struct.snd_pmac, %struct.snd_pmac* %4, i32 0, i32 0
  %6 = load %struct.pmac_daca*, %struct.pmac_daca** %5, align 8
  store %struct.pmac_daca* %6, %struct.pmac_daca** %3, align 8
  %7 = load %struct.pmac_daca*, %struct.pmac_daca** %3, align 8
  %8 = icmp ne %struct.pmac_daca* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.pmac_daca*, %struct.pmac_daca** %3, align 8
  %12 = getelementptr inbounds %struct.pmac_daca, %struct.pmac_daca* %11, i32 0, i32 0
  %13 = call i32 @snd_pmac_keywest_cleanup(i32* %12)
  %14 = load %struct.pmac_daca*, %struct.pmac_daca** %3, align 8
  %15 = call i32 @kfree(%struct.pmac_daca* %14)
  %16 = load %struct.snd_pmac*, %struct.snd_pmac** %2, align 8
  %17 = getelementptr inbounds %struct.snd_pmac, %struct.snd_pmac* %16, i32 0, i32 0
  store %struct.pmac_daca* null, %struct.pmac_daca** %17, align 8
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @snd_pmac_keywest_cleanup(i32*) #1

declare dso_local i32 @kfree(%struct.pmac_daca*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
